--- a/reporting/templates/reporting/gpp_report.html
+++ b/reporting/templates/reporting/gpp_report.html
@@ -9,7 +9,7 @@
 
 {% block messages %}
     <div class="helpblock">
-        <p>GPC Report</p>
+        <p>GPP Report</p>
     </div>
 {% endblock %}
 
