--- a/templates/admin/topbar.html
+++ b/templates/admin/topbar.html
@@ -1,6 +1,6 @@
 <li class="nav-item d-none d-sm-inline-block dropdown">
     <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-       aria-expanded="false">Status</a>
+       aria-expanded="false">Portfolio Status</a>
     <ul class="dropdown-menu">
         <li class="dropdown-header">General</li>
         <li><a class="dropdown-item" href="/reporting/portfolio_overview">Overview</a></li>
@@ -20,15 +20,16 @@
 
 <li class="nav-item d-none d-sm-inline-block dropdown">
     <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-       aria-expanded="false">Impact</a>
+       aria-expanded="false">Portfolio Impact</a>
     <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="/reporting/ghg_reduction">GHG Reduction</a></li>
+        <li><a class="dropdown-item" href="/reporting/ghg_reduction">Project GHG Reduction</a></li>
+        <li><a class="dropdown-item" href="/reporting/scope_2_report">Scope 2 Reporting</a></li>
     </ul>
 </li>
 
 <li class="nav-item d-none d-sm-inline-block dropdown">
     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-       aria-expanded="false">Policy</a>
+       aria-expanded="false">Portfolio Policies</a>
     <ul class="dropdown-menu">
         <li class="dropdown-header">General</li>
         <li class="dropdown-item"><a href="{% url 'policy:Policy_overview' %}">Overview</a></li>
