--- a/templates/admin/change_form.html
+++ b/templates/admin/change_form.html
@@ -2,16 +2,18 @@
 {% load i18n admin_urls static leaflet_tags %}
 
 {% block stylesheets %}
-{{ block.super }}
-{% leaflet_css plugins="ALL" %}
-<style>
-/* Force leaflet controls underneath header (z-index 1000) and
-   above leaflet tiles (z-index 400)*/
-.leaflet-top{z-index:999;}
-</style>
+    {{ block.super }}
+    {% leaflet_css plugins="ALL" %}
+    <style>
+        /* Force leaflet controls underneath header (z-index 1000) and
+           above leaflet tiles (z-index 400)*/
+        .leaflet-top {
+            z-index: 999;
+        }
+    </style>
 {% endblock %}
 
 {% block javascripts %}
-{{ block.super }}
-{% leaflet_js plugins="ALL" %}
+    {{ block.super }}
+    {% leaflet_js plugins="ALL" %}
 {% endblock %}
