Fixing doc yaml

--- a/start/templates/start/front.html
+++ b/start/templates/start/front.html
@@ -86,7 +86,7 @@
 
         <div class="card-body">
             <ul>
-                <li>A user can log-in into the application with their credentials</li>
+                <li>A user can log in into the application with their credentials</li>
                 <li>Inspect available data sets (tables or relations) that capture the EBA / EP / PCAF / GHG Protocol Data requirements, including a variety of relevant reference data available as Open Data</li>
                 <li>Insert, Update or Delete records (e.g. new Project Data)</li>
                 <li>Consult the documentation as to the meaning and requirements of each data element</li>
