--- a/start/templates/start/front.html
+++ b/start/templates/start/front.html
@@ -35,10 +35,13 @@
         <div class="card-body">
             <p>Equinox is an open source platform focused on the challenge of Sustainable Portfolio Management</p>
 
-            <p>Sustainability (both environmental and social) is a major issue that affects all economies. Developing tools and methodologies that improve the ability of all stakeholders to assess and report risks is an important objective and Equinox aims to help carry out this process as optimally as possible.</p>
+            <p>Sustainability (both environmental and social) is a major issue that affects all economies. Developing
+                tools and methodologies that improve the ability of all stakeholders to assess and report risks is an
+                important objective and Equinox aims to help carry out this process as optimally as possible.</p>
 
             <p>Equinox is a both <i>a database and a web application</i> that works together with a tailored
-                <i>data schema</i> to provide easy access to sustainability data adhering to both regulatory requirements, protocols and recommendations and financial industry initiatives.
+                <i>data schema</i> to provide easy access to sustainability data adhering to both regulatory
+                requirements, protocols and recommendations and financial industry initiatives.
             </p>
         </div>
     </div>
@@ -49,16 +52,26 @@
         </div>
         <div class="card-body">
             <p>Running the application creates a
-                <i>server</i> that can then be accessed via any regular web browser. NB: For easy installation and testing the current release uses a self-contained sqlite database instead of a production database server
+                <i>server</i> that can then be accessed via any regular web browser. NB: For easy installation and
+                testing the current release uses a self-contained sqlite database instead of a production database
+                server
             </p>
 
             <p>The initial functionality of Equinox focuses on integrating the following concepts</p>
 
             <ul>
-                <li>Implementing the GHG Protocol for accounting for CO2 emissions via inventories, activities and emission factors</li>
-                <li>The PCAF accounting and reporting framework (currently for Project Finance and Mortgage Finance GHG emissions)</li>
-                <li>Support for Green Public Procurement through the integration of TED data models and associated ontologies</li>
-                <li>Holistic risk management with the integration of the European Banking Authority's Criteria (currently Credit Risk Assessment of Project Finance under the Standardized approach for Specialized Lending)
+                <li>Implementing the GHG Protocol for accounting for CO2 emissions via inventories, activities and
+                    emission factors
+                </li>
+                <li>The PCAF accounting and reporting framework (currently for Project Finance and Mortgage Finance GHG
+                    emissions)
+                </li>
+                <li>Support for Green Public Procurement through the integration of TED data models and associated
+                    ontologies
+                </li>
+                <li>Holistic risk management with the integration of the European Banking Authority's Criteria
+                    (currently Credit Risk Assessment of Project Finance under the Standardized approach for Specialized
+                    Lending)
                 </li>
                 <li>Support for monitoring the Equator Principles for Project Finance</li>
             </ul>
@@ -87,10 +100,14 @@
         <div class="card-body">
             <ul>
                 <li>A user can log in into the application with their credentials</li>
-                <li>Inspect available data sets (tables or relations) that capture the EBA / EP / PCAF / GHG Protocol Data requirements, including a variety of relevant reference data available as Open Data</li>
+                <li>Inspect available data sets (tables or relations) that capture the EBA / EP / PCAF / GHG Protocol
+                    Data requirements, including a variety of relevant reference data available as Open Data
+                </li>
                 <li>Insert, Update or Delete records (e.g. new Project Data)</li>
                 <li>Consult the documentation as to the meaning and requirements of each data element</li>
-                <li>Create Reports about both current Portfolio Status versus environmental impact and assessing the Impact of activities (e.g., investment policies) planned for the future</li>
+                <li>Create Reports about both current Portfolio Status versus environmental impact and assessing the
+                    Impact of activities (e.g., investment policies) planned for the future
+                </li>
             </ul>
         </div>
 
@@ -125,7 +142,8 @@
             <h3>Join the Equinox community</h3>
         </div>
         <div class="card-body">
-            <p>The project aims to be driven by community needs. We welcome issues, code contributions and feature requests via
+            <p>The project aims to be driven by community needs. We welcome issues, code contributions and feature
+                requests via
                 <a href="https://github.com/open-risk/equinox">github</a>.
             </p>
         </div>
