--- a/policy/templates/policy/statistics_histogram.html
+++ b/policy/templates/policy/statistics_histogram.html
@@ -9,7 +9,7 @@
 {% block extrahead %}
     {{ block.super }}
     <script type="text/javascript" charset="utf-8"
-            src="{% static 'start/js/datatables/media/js/jquery.dataTables.js' %}"></script>
+            src="{% static 'start/js/datatables/media/js/datatable.js' %}"></script>
     <script type="text/javascript" charset="utf-8" src="{% static 'start/js/d3/d3.js' %}"></script>
 {% endblock %}
 
