--- a/policy/templates/policy/dataflow_categories.html
+++ b/policy/templates/policy/dataflow_categories.html
@@ -38,7 +38,7 @@
                         <thead>
                         <tr>
                             <th class="table_header">Country</th>
-                            <th class="table_header">All OxCGRT Data</th>
+                            <th class="table_header">All Policy Data</th>
                             <th class="table_header">Recently Changed</th>
                             <th class="table_header">Description</th>
                         </tr>
