--- a/policy/templates/policy/policy_overview.html
+++ b/policy/templates/policy/policy_overview.html
@@ -17,7 +17,7 @@
     <div class="card card-primary card-outline">
         <div class="card-body">
             <div class="helpblock" id="page_content_front">
-                <p class="helpblocktext">This page lists latest datasets tracked and processed by the Policy Data Explorer and as well code / functionality upgrades</p>
+                <p class="helpblocktext">This page lists latest datasets tracked and processed by the Policy Data Explorer</p>
             </div>
         </div>
     </div>
