--- a/policy/templates/policy/df_breadcrumb.html
+++ b/policy/templates/policy/df_breadcrumb.html
@@ -3,11 +3,11 @@
     <span
             class="breadcrumb_button"><a style="color:white;" href="{% url 'policy:DataFlow_categories' %}"
                                          target="_blank">All Data</a></span> <span
-            class="breadcrumb_button">Source:</span><span class="gray_no">Oxford</span> <span
+            class="breadcrumb_button">Source:</span><span class="gray_no">TODO</span> <span
             class="breadcrumb_button">Country:</span> <span class="gray_no"><a
             href="{% url 'policy:DataFlow_country_aggregate' dataflow.identifier %}">  {{ dataflow.name }} </a></span>
         <span
-                class="breadcrumb_button">Total DataSets:</span><span class="gray_no">{{ dataflow.oxford_n }}</span>
+                class="breadcrumb_button">Total DataSets:</span><span class="gray_no">{{ dataflow.available_n }}</span>
         <span
                 class="breadcrumb_button">Tracked DataSets:</span><span
             class="gray_no">{{ dataflow.dashboard_n }}</span> <span
