--- a/policy/templates/policy/starter_links.html
+++ b/policy/templates/policy/starter_links.html
@@ -1,11 +1,11 @@
 <table>
     <tr>
         <td class="roundtd">
-            <a class="blue_link" target="_blank" href="{{ root_view }}/policy/dataflow/categories">Explore all
+            <a class="blue_link" target="_blank" href="/policy/dataflow/categories">Explore all
                 the policy dataflows available</a>
         </td>
         <td class="roundtd">
-            <a class="blue_link" target="_blank" href="{{ root_view }}/policy/dataseries/all/red">Check the latest significant changes in policies across the world</a>
+            <a class="blue_link" target="_blank" href="/policy/dataseries/all/red">Check the latest significant changes</a>
         </td>
     </tr>
 </table>
