--- a/policy/templates/policy/time_breadcrumb.html
+++ b/policy/templates/policy/time_breadcrumb.html
@@ -1,22 +1,20 @@
-<div class="card card-primary card-outline">
-    <div class="card-body">
-    <span class="gray_feed"><a
-            style="color:white;" href="{% url 'policy:DataFlow_categories' %}" target="_blank">All Data</a>
-    </span> <span
-            id="red_feed" title="Major change"><a href="{% url 'policy:DataSeries_filter' 'red' %}" target="_blank"
-                                                  style="color:black">Major Change</a>
-    </span> <span id="red_no">1</span> <span id="orange_feed" title="Significant change"><a
-            href="{% url 'policy:DataSeries_filter' 'orange' %}"
-            target="_blank"
-            style="color:black">Significant Change</a>
-    </span> <span
-            id="orange_no">2
-    </span> <span id="yellow_feed" title="Material change"><a
-            href="{% url 'policy:DataSeries_filter' 'yellow' %}" target="_blank"
-            style="color:black">Some Change</a>
-    </span> <span id="yellow_no">3
-    </span> <span
-            class="gray_feed">Little Change</span><span id="gray_no">1
-    </span>
-    </div>
-</div>
+<span>
+    <a class="gray_feed" href="{% url 'policy:DataFlow_categories' %}" target="_blank">All Data</a>
+</span>
+<span title="Major change">
+    <a class="red_feed" href="{% url 'policy:DataSeries_filter' 'red' %}" target="_blank">Major Change</a>
+</span>
+<span class="red_no">1</span>
+<span title="Significant change">
+    <a class="orange_feed" href="{% url 'policy:DataSeries_filter' 'orange' %}" target="_blank">Significant Change</a>
+</span>
+<span class="orange_no">2
+</span>
+<span title="Material change">
+    <a class="yellow_feed" href="{% url 'policy:DataSeries_filter' 'yellow' %}" target="_blank">Some Change</a>
+</span>
+<span class="yellow_no">3
+</span>
+<span class="gray_feed">Little Change</span>
+<span class="gray_no">1
+</span>
