--- a/templates/admin/topbar.html
+++ b/templates/admin/topbar.html
@@ -32,7 +32,7 @@
        aria-expanded="false">Portfolio Policies</a>
     <ul class="dropdown-menu">
         <li class="dropdown-item"><a href="{% url 'policy:Policy_overview' %}">Overview</a></li>
-        <li class="dropdown-item"><a href="{% url 'policy:DataFlow_categories' %}">Dataflow Catalog</a></li>
+        <li class="dropdown-item"><a href="{% url 'policy:DataFlow_categories' %}">Policy Catalog</a></li>
 {#        <li class="dropdown-item"><a href="{% url 'policy:DataFlow_country' %}">Dataflow Catalog</a></li>#}
     </ul>
 </li>
