--- a/policy/templates/policy/dataseries_plot.html
+++ b/policy/templates/policy/dataseries_plot.html
@@ -20,16 +20,34 @@
     {{ title }} Policy Data Plot for {{ object.title }}
 {% endblock %}
 
-{% block messages %}
-    <div class="helpblock" id="page_content_front">
-        <h4><i class="fa fa-area-chart"></i> Policy Data: Timeseries Plot</h4>
-        <p class="helpblocktext"><b>Dataseries: {{ object.title }}</b><br><i>Details: {{ object.title_long }}</i></p>
-    </div>
-{% endblock %}
 
 {% block content %}
 
-    {% include "policy/ds_breadcrumb.html" %}
+    <div class="card card-primary card-outline">
+        <div class="card-info">
+            <div class="card-header">
+                <h4><i class="fa fa-info-circle"></i> About </h4>
+            </div>
+            <div class="card-body">
+                <div class="helpblock" id="page_content_front">
+                    <h4><i class="fa fa-area-chart"></i> Policy Data: Timeseries Plot</h4>
+                    <p class="helpblocktext">
+                        <b>Dataseries: {{ object.title }}</b><br><i>Details: {{ object.title_long }}</i></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="card card-primary card-outline">
+        <div class="card-info">
+            <div class="card-header">
+                <h4><i class="fa fa-thermometer-quarter"></i> Status Update </h4>
+            </div>
+            <div class="card-body">
+                {% include "policy/ds_breadcrumb.html" %}
+            </div>
+        </div>
+    </div>
 
 
     <div class="card card-primary card-outline">
@@ -89,9 +107,7 @@
         let dates = {{ object.dates | safe }};
         let metrics = {{ object.metrics | safe }};
         let title = "{{ object.title_long }}";
-        console.log(title);
         let datatype = "{{ object.field_type }}";
-        console.log(datatype);
     </script>
 
     <script type="text/javascript" charset="utf-8" src="{% static 'policy/js/plot.js' %}"></script>
