--- a/policy/templates/policy/df_breadcrumb.html
+++ b/policy/templates/policy/df_breadcrumb.html
@@ -1,16 +1,22 @@
-<div class="card card-primary card-outline">
-    <div class="card-body">
-    <span
-            class="breadcrumb_button"><a style="color:white;" href="{% url 'policy:DataFlow_categories' %}"
-                                         target="_blank">All Data</a></span> <span
-            class="breadcrumb_button">Source:</span><span class="gray_no">TODO</span> <span
-            class="breadcrumb_button">Country:</span> <span class="gray_no"><a
-            href="{% url 'policy:DataFlow_country_aggregate' dataflow.identifier %}">  {{ dataflow.name }} </a></span>
-        <span
-                class="breadcrumb_button">Total DataSets:</span><span class="gray_no">{{ dataflow.available_n }}</span>
-        <span
-                class="breadcrumb_button">Tracked DataSets:</span><span
-            class="gray_no">{{ dataflow.dashboard_n }}</span> <span
-            class="breadcrumb_button">Active DataSets:</span><span class="gray_no">{{ dataflow.live_n }}</span>
-    </div>
-</div>
+<span class="breadcrumb_button">
+    <a style="color:white;" href="{% url 'policy:DataFlow_categories' %}" target="_blank">All Data</a>
+</span>
+<span class="breadcrumb_button">Source:
+</span>
+<span class="gray_no">TODO
+</span>
+<span class="breadcrumb_button">Country:</span>
+<span class="gray_no">
+    <a href="{% url 'policy:DataFlow_country_aggregate' dataflow.identifier %}">  {{ dataflow.name }} </a>
+</span>
+<span class="breadcrumb_button">Total DataSets:</span>
+<span class="gray_no">{{ dataflow.available_n }}
+</span>
+<span class="breadcrumb_button">Tracked DataSets:
+</span>
+<span class="gray_no">{{ dataflow.dashboard_n }}
+</span>
+<span class="breadcrumb_button">Active DataSets:
+</span>
+<span class="gray_no">{{ dataflow.live_n }}
+</span>
