--- a/policy/templates/policy/policy_overview.html
+++ b/policy/templates/policy/policy_overview.html
@@ -3,21 +3,28 @@
 {% load custom_tags %}
 {% load humanize %}
 
-{% block title %}
-    {{ title }} Latest Policy Data News and Stats
-{% endblock %}
-
 {% block extrastyle %}
     {{ block.super }}
     <link rel="stylesheet" type="text/css" href="{% static 'policy/css/policy.css' %}">
 {% endblock %}
 
+{% block title %}
+    {{ title }} The Latest Policy Data News and Stats
+{% endblock %}
+
 {% block content %}
 
     <div class="card card-primary card-outline">
-        <div class="card-body">
-            <div class="helpblock" id="page_content_front">
-                <p class="helpblocktext">This page lists latest datasets tracked and processed by the Policy Data Explorer</p>
+        <div class="card-info">
+            <div class="card-header">
+                <h4><i class="fa fa-info-circle"></i> About </h4>
+            </div>
+            <div class="card-body">
+                <div class="helpblock" id="page_content_front">
+                    <p class="helpblocktext">The Policy Overview page lists statistics for the policy datasets tracked
+                        and processed by the Policy Data Explorer. It also provides links to the most common
+                        functionalities supported.</p>
+                </div>
             </div>
         </div>
     </div>
@@ -25,11 +32,10 @@
     <div class="card card-primary card-outline">
         <div class="card-info">
             <div class="card-header">
-                <h4><i class="fa fa-info-circle"></i> Dataseries Table </h4>
+                <h4><i class="fa fa-tachometer-alt"></i> Statistics Dashboard </h4>
             </div>
             <div class="card-body">
 
-                <h3><i class="fa fa-dashboard"></i> Current Statistics</h3>
                 {% include "policy/tbl_statistics.html" %}
 
             </div>
@@ -39,7 +45,7 @@
     <div class="card card-primary card-outline">
         <div class="card-info">
             <div class="card-header">
-                <h3><i class="fa fa-hand-o-right"></i> Getting Started</h3>
+                <h3><i class="fa fa-play"></i> Getting Started</h3>
             </div>
             <div class="card-body">
                 {% include "policy/starter_links.html" %}
@@ -49,7 +55,6 @@
 
     <script>
         var statistics = {{ statistics | safe }};
-        var root_view = "{{ root_view }}";
         $("#total_datasets").html(statistics['total_datasets']);
         $("#tracked_datasets").html(statistics['tracked_datasets']);
         $("#live_datasets").html(statistics['live_datasets']);
