local version of vega. fixes #103

--- a/start/templates/start/d3.html
+++ b/start/templates/start/d3.html
@@ -4,7 +4,7 @@
 
 {% block extrahead %}
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'start/img/equinox.png' %}"/>
-    <script type="text/javascript" charset="utf-8" src="{% static 'start/js/jquery.js' %}"></script>jquery.js
+    <script type="text/javascript" charset="utf-8" src="{% static 'start/js/jquery.js' %}"></script>
     <script type="text/javascript" charset="utf-8" src="{% static 'start/js/d3.js' %}"></script>
     <script type="text/javascript" charset="utf-8" src="{% static 'start/js/d3-time-format.v3.js' %}"></script>
 {% endblock %}
