--- a/reporting/templates/reporting/vega_viz.html
+++ b/reporting/templates/reporting/vega_viz.html
@@ -10,9 +10,9 @@
 
 {% block extrahead %}
     {{ block.super }}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vega/5.7.0/vega.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vega-lite/3.4.0/vega-lite.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vega-embed/5.1.3/vega-embed.js"></script>
+    <script type="text/javascript" charset="utf-8" src="{% static 'reporting/js/vega.js' %}"></script>
+    <script type="text/javascript" charset="utf-8" src="{% static 'reporting/js/vega-embed.js' %}"></script>
+    <script type="text/javascript" charset="utf-8" src="{% static 'reporting/js/vega-lite.js' %}"></script>
 {% endblock %}
 
 {% block extrastyle %}
@@ -49,14 +49,12 @@
         let spec = "{{ vega_specification | escapejs }}";
         let data = JSON.parse(myData);
         let vspec = JSON.parse(spec);
-        console.log(vspec);
-        console.log(data);
 
-        vspec.data = data;visualization_single.html
+        vspec.data = data;
+        visualization_single.html
 
         let runtime = vega.parse(vspec);
         let changeSet = vega.changeset().remove(vega.truthy).insert(data);
-        console.log(changeSet);
 
         let view = new vega.View(runtime)
             .logLevel(vega.Warn) // set view logging level
