--- a/start/static/start/css/styling.css
+++ b/start/static/start/css/styling.css
@@ -20,6 +20,6 @@ img {
 
 body {
     font-family: Lato, serif;
-    background-color: #4d4d4d;
-    color: white;
+    /*background-color: #4d4d4d;*/
+    /*color: white;*/
 }
