--- a/reporting/templates/reporting/pcaf_waterfall_report.html
+++ b/reporting/templates/reporting/pcaf_waterfall_report.html
@@ -1,7 +1,4 @@
-{% extends "start/tabular.html" %}
-{% load i18n static %}
-{% load custom_tags %}
-{% load humanize %}
+{% extends "start/vega.html" %}
 
 {% block title %}
     {{ title }} PCAF Waterfall Report
@@ -17,55 +14,36 @@
 
     <div class="card card-primary card-outline">
         <div class="card-body pad table-responsive">
-
-
             <div class="card card-info">
                 <div class="card-header">
                     <h4> PCAF Waterfall Report of GHG Inventory Emissions</h4>
                 </div>
-
                 <div class="card-body">
-                    <table id="data_list" class="display responsive" width="100%">
-                        <thead>
-                        <tr>
-                            {% for entry in TableHeader %}
-                                <th>
-                                    {{ entry }}
-                                </th>
-                            {% endfor %}
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for key, value in TableRows.items %}
-                            <tr>
-                                {% for c in value %}
-                                    <td>
-                                        {{ c }}
-                                    </td>
-                                {% endfor %}
-                            </tr>
-                        {% endfor %}
-
-                        </tbody>
-
-                    </table>
-
+                    TODO
+                    <div id="vis"></div>
                 </div>
             </div>
-
         </div>
+    </div>
 
-        <script>
-            $('#data_list').DataTable({
-                "pagingType": "full_numbers",
-                "responsive": true,
-                "bSort": true,
-                "displayLength": 50,
-                "autoWidth": true,
-                "searching": false
-            });
-        </script>
+    <script>
 
+        let vspec = {{ vega_specification | safe }};
 
+        vegaEmbed('#vis', vspec);
+
+        {#let data = {{ visualization_data | safe }};#}
+        {#vspec.data = data;#}
+        {##}
+        {#let runtime = vega.parse(vspec);#}
+        {#let changeSet = vega.changeset().remove(vega.truthy).insert(data);#}
+        {##}
+        {#let view = new vega.View(runtime)#}
+        {#    .logLevel(vega.Warn) // set view logging level#}
+        {#    .initialize(document.querySelector('#vis')) // set parent DOM element#}
+        {#    .renderer('svg') // set render type (defaults to 'canvas')#}
+        {#    .hover() // enable hover event processing#}
+        {#    .run(); // update and render the view#}
+    </script>
 
 {% endblock %}
